@@ -1,3 +1,6 @@
+2011-03-11 Victor Roemer <vroemer@gmail.com>
+	* Added ziptool man page
+
 2011-02-12 Victor Roemer <vroemer@gmail.com>
 	* changed all references of the ZIP file extenstion to PK3
 	* README - Wrote a detailed readme that could easily be translated into a
